# firestore-import-workaround

./: Makefile  README.md  pyproject.toml  workaround.py
pb/apphosting/client/admin_jobs_v3/: entity_set_spec_pb2.py  export_metadata_pb2.py
pb/apphosting/ext/datastore_admin/: backup_pb2.py
pb/storage/onestore/v3/: entity_pb2.py
proto/apphosting/client/admin_jobs_v3/: entity_set_spec.proto  export_metadata.proto
proto/apphosting/ext/datastore_admin/: backup.proto
proto/storage/onestore/v3/: entity.proto
